{
    "name": "MainControl",
    "maps": [
        {
            "name": "Game",
            "id": "1cc5ee7a-a771-4a88-bfa7-be5f6a008bcb",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "a0f18805-8d83-47a1-8a3f-8fb3336b2d02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "40e27c7f-9c18-4014-b9df-7b29bb3b6d6c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfdf933c-90bb-4f5c-83f1-2f05b443578f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c136f297-4987-4252-bcab-b22b1ab1cd51",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "eb34621d-7266-4846-a663-6475b8f48e89",
            "actions": [
                {
                    "name": "Console",
                    "type": "Button",
                    "id": "7891fd68-f838-4cb6-9e62-adbbe86d008b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "47de693c-8456-4084-b623-03140b336f81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PageUp",
                    "type": "Button",
                    "id": "c0e35c80-11ec-4692-9e9a-8895da9e0ab4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PageDown",
                    "type": "Button",
                    "id": "bebc0559-2437-4a21-a828-101e49aefaef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "395b2f69-fc83-45f4-98fb-48a532f77e0a",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "Console",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84bf6322-86da-49a1-954c-c2644cc37ae8",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63a4c3f4-b726-4da9-bd51-63878a3e54c0",
                    "path": "<Keyboard>/pageUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "PageUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f48ed602-9311-4038-8f58-749014552a64",
                    "path": "<Keyboard>/pageDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "M&K",
                    "action": "PageDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "M&K",
            "bindingGroup": "M&K",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}